# veryfi_test

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  README_approach.md  README_extractor.md  pyproject.toml
.github/workflows/: integration.yml  python-publish.yml  quality.yml
examples/: documents.json  non_switch.json
scripts/: extract_switch_invoices.py
tests/: README.md  test_pipeline.py
veryfi_test/: cli.py  config.py  extract_cli.py  extractor.py  ocr_cli.py
